@@ -1,3 +1,8 @@
+2007-04-25  Matthias Wimmer  <m@tthias.eu>
+
+    * proxy65/proxy65.h: continued work on proxy65
+    * proxy65/proxy65.cc: same
+
 2007-04-15  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/lib/pointer.tcc: import from jadc2s of a pointer template class
